<resources>
    <string name="app_name">Prototype</string>

    <string name="text_age">Age</string>
    <string name="text_email">Email</string>
    <string name="text_mobile_number">Phone</string>
    <string name="text_address">Address</string>
    <string name="text_birthday">Birthday</string>

    <string name="text_contact_name">Contact Name</string>
    <string name="text_contact_mobile_number">@string/text_mobile_number</string>
    <string name="text_back">Back</string>
</resources>
